[tool.poetry]
name = "pcnsm-backend"
version = "0.1.0"
description = ""
authors = ["Bartłomiej Jabłoński <bjablonski@fg-it.pl>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
